lets see if these work choo choo

--- a/nachos-3.4/code/Makefile.common
+++ b/nachos-3.4/code/Makefile.common
@@ -48,7 +48,8 @@ THREAD_H =../threads/copyright.h\
 	../machine/interrupt.h\
 	../machine/sysdep.h\
 	../machine/stats.h\
-	../machine/timer.h
+	../machine/timer.h \
+	../threads/elevator.h
 
 THREAD_C =../threads/main.cc\
 	../threads/list.cc\
@@ -58,7 +59,9 @@ THREAD_C =../threads/main.cc\
 	../threads/system.cc\
 	../threads/thread.cc\
 	../threads/utility.cc\
-	../threads/ping.cc\
+	../threads/ping.cc \
+	../threads/elevator.cc \
+	../threads/ElevatorTest.cc \
 	../threads/threadtest.cc\
 	../machine/interrupt.cc\
 	../machine/sysdep.cc\
@@ -68,7 +71,8 @@ THREAD_C =../threads/main.cc\
 THREAD_S = ../threads/switch.s
 
 THREAD_O =main.o list.o scheduler.o synch.o synchlist.o system.o thread.o \
-	utility.o ping.o threadtest.o interrupt.o stats.o sysdep.o timer.o
+	utility.o threadtest.o interrupt.o stats.o sysdep.o timer.o ping.o \
+	elevator.o ElevatorTest.o
 
 USERPROG_H = ../userprog/addrspace.h\
 	../userprog/bitmap.h\
