--- a/nachos-3.4/code/Makefile.common
+++ b/nachos-3.4/code/Makefile.common
@@ -26,7 +26,7 @@
 # of liability and disclaimer of warranty provisions.
 
 #CFLAGS = -g -Wall -Wshadow -Wwrite-strings $(INCPATH) $(DEFINES) $(HOST) -DCHANGED
-CFLAGS = -g -Wall -Wshadow -m32 $(INCPATH) $(DEFINES) $(HOST) -DCHANGED
+CFLAGS = -g -Wall -Wshadow -m32 $(INCPATH) $(DEFINES) $(HOST) -DCHANGED -DHW1_SEMAPHORES
 
 # These definitions may change as the software is updated.
 # Some of them are also system dependent
